# LLM_Engineering

./: .gitignore  main.py  pyproject.toml  requirements.txt  training_data.jsonl
justins_solutions/: week1_solution.ipynb  week2_solution.ipynb
practice/: prices.db  week2_day2_practice.ipynb  week2_day3.ipynb  week2_day4_practice.ipynb
scraper/: scraper.py
